--- a/kepler.gl/resources/ui/keplergl_dialog.ui
+++ b/kepler.gl/resources/ui/keplergl_dialog.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Foursquare</string>
+   <string>kepler.gl</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="leftMargin">
